# rose_navigation

arc_local_planner/: CMakeLists.txt  arc_local_planner_plugin.xml
arc_local_planner/config/: arc_local_planner.yaml
arc_local_planner/include/arc_local_planner/: arc.hpp  arc_footprint.hpp  arc_local_planner.hpp  arc_local_planner_costmap_model.hpp  trajectory_footprint.hpp
arc_local_planner/src/: arc_footprint.cpp  arc_local_planner.cpp  arc_local_planner_costmap_model.cpp  trajectory_footprint.cpp
costmap_2d_plugins/: costmap_2d_plugins.xml  package.xml
costmap_2d_plugins/include/costmap_2d_plugins/: simulation_obstacle_layer.hpp
doc/: automatic_navigation_benchmark.md
footprint_collision_checker/include/footprint_collision_checker/: footprint_collision_checker.hpp
footprint_collision_checker/src/: footprint_collision_checker.cpp
move_base_smc/: package.xml
move_base_smc/include/move_base_smc/: move_base_smc_node.hpp
move_base_smc/src/: move_base_smc.cpp
pose_explorer/: CMakeLists.txt
pose_explorer/include/: pose_explorer.hpp  pose_explorer_node.hpp
pose_explorer/srv/: reachable_poses.srv
relative_positioning/: package.xml
relative_positioning/action/: relative_positioning.action
relative_positioning/include/relative_positioning/: relative_positioning.hpp
relative_positioning/src/: relative_positioning.cpp  relative_positioning_node.cpp
rose_arc_local_planner/: CMakeLists.txt  package.xml  rose_arc_local_planner_plugin.xml
rose_arc_local_planner/config/: rose_arc_local_planner.yaml
rose_arc_local_planner/include/rose_arc_local_planner/: arc.hpp  arc_footprint.hpp  arc_local_planner.hpp
rose_arc_local_planner/src/: arc_footprint.cpp  arc_local_planner.cpp  arc_local_planner_costmap_model.cpp  trajectory_footprint.cpp
rose_costmap_2d_plugins/: CMakeLists.txt  package.xml  rose_costmap_2d_plugins.xml
rose_costmap_2d_plugins/include/rose_costmap_2d_plugins/: simulation_obstacle_layer.hpp
rose_costmap_2d_plugins/src/: simulation_obstacle_layer.cpp
rose_footprint_collision_checker/: CMakeLists.txt  package.xml
rose_footprint_collision_checker/include/rose_footprint_collision_checker/: footprint_collision_checker.hpp
rose_footprint_collision_checker/src/: footprint_collision_checker.cpp  test_node.cpp
rose_footprint_collision_checker/test/: footprint_collision_checker_utest.cpp
rose_move_base_smc/: CMakeLists.txt  package.xml
rose_move_base_smc/include/move_base_smc/: move_base_smc.hpp
rose_move_base_smc/include/rose_move_base_smc/: move_base_smc.hpp  move_base_smc_node.hpp
rose_move_base_smc/src/: move_base_smc.cpp  move_base_smc_node.cpp
rose_navigation/: CMakeLists.txt  package.xml
rose_pose_explorer/: CMakeLists.txt  package.xml
rose_pose_explorer/include/rose_pose_explorer/: pose_explorer.hpp  pose_explorer_node.hpp
rose_pose_explorer/src/: pose_explorer.cpp  pose_explorer_node.cpp
rose_relative_positioning/: CMakeLists.txt  package.xml
rose_relative_positioning/include/relative_positioning/: relative_positioning_node.hpp
rose_relative_positioning/include/rose_relative_positioning/: relative_positioning.hpp  relative_positioning_node.hpp
rose_relative_positioning/src/: relative_positioning.cpp  relative_positioning_node.cpp
