<?xml version="1.0"?>
<package>
  <name>rose_arc_local_planner</name>
  <version>0.0.0</version>
  <description>The rose_arc_local_planner package</description>

  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rose_geometry</build_depend>
  <build_depend>rose_twist_moving_average_filter</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>rose_shared_variables</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_geometry</run_depend>
  <run_depend>rose_twist_moving_average_filter</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>rose_shared_variables</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nav_core plugin="${prefix}/rose_arc_local_planner_plugin.xml" />
  </export>
</package>