<?xml version="1.0"?>
<package>
  <name>rose_costmap_2d_plugins</name>
  <version>0.0.0</version>
  <description>Costmap_2d layer plugins package</description>

  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>voxel_grid</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>voxel_grid</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/rose_costmap_2d_plugins.xml" />
  </export>
</package>
