<?xml version="1.0"?>
<package>
  <name>rose_move_base_smc</name>
  <version>0.0.0</version>
  <description>Slightly altered move base package that uses the SMC interface</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>relative_positioning</build_depend>
  <build_depend>shared_variables</build_depend>
  <build_depend>server_multiple_client</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>relative_positioning</run_depend>
  <run_depend>shared_variables</run_depend>
  <run_depend>server_multiple_client</run_depend>

  <export>
  </export>
</package>