<?xml version="1.0"?>
<package>
  <name>pose_explorer</name>
  <version>0.0.0</version>
  <description>The pose_explorer package</description>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>