<?xml version="1.0"?>
<package>
  <name>rose_relative_positioning</name>
  <version>0.0.0</version>
  <description>Given an stamped pose this will generate the required command velocities to position the base_link in the odometry frame.</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>operator_messaging</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rose_generic_platform</build_depend>
  <build_depend>rose_geometry</build_depend>
  <build_depend>rose_transformations</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>shared_variables</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>operator_messaging</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_generic_platform</run_depend>
  <run_depend>rose_geometry</run_depend>
  <run_depend>rose_transformations</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>shared_variables</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>